Closed Bug 1681765 Opened 3 years ago Closed 3 years ago

Crash in [@ InvalidArrayIndex_CRASH | GetBindGroupLayout]

Categories

(Core :: Graphics: WebGPU, defect)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox88 --- disabled
firefox89 --- disabled
firefox90 --- fixed

People

(Reporter: sefeng, Assigned: kvark)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/e611e14c-22d2-4f9b-9e7f-22f0b0201207

MOZ_CRASH Reason: ElementAt(aIndex = 0, aLength = 0)

Top 10 frames of crashing thread:

0 libxul.so InvalidArrayIndex_CRASH xpcom/ds/nsTArray.cpp:28
1 libxul.so mozilla::webgpu::ComputePipeline::GetBindGroupLayout const dom/webgpu/ComputePipeline.cpp:39
2 libxul.so mozilla::dom::GPUComputePipeline_Binding::getBindGroupLayout dom/bindings/WebGPUBinding.cpp:14099
3 libxul.so bool mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions> dom/bindings/BindingUtils.cpp:3230
4 libxul.so js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:594
5 libxul.so Interpret js/src/vm/Interpreter.cpp:3288
6 libxul.so js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:619
7 libxul.so js::Call js/src/vm/Interpreter.cpp:664
8 libxul.so js::CallSelfHostedFunction js/src/vm/SelfHosting.cpp:1698
9 libxul.so AsyncFunctionResume js/src/vm/AsyncFunction.cpp:129

Invalid index access!

Crash Signature: [@ InvalidArrayIndex_CRASH | mozilla::webgpu::ComputePipeline::GetBindGroupLayout] → [@ InvalidArrayIndex_CRASH | mozilla::webgpu::ComputePipeline::GetBindGroupLayout] [@ InvalidArrayIndex_CRASH | mozilla::webgpu::RenderPipeline::GetBindGroupLayout ]
Summary: Crash in [@ InvalidArrayIndex_CRASH | mozilla::webgpu::ComputePipeline::GetBindGroupLayout] → Crash in [@ InvalidArrayIndex_CRASH | GetBindGroupLayout]
Flags: needinfo?(dmalyshau)

Grabbing. S3 because not enabled by default in Nightly

Assignee: nobody → dmalyshau
Severity: -- → S3
Status: NEW → ASSIGNED
Flags: needinfo?(dmalyshau)

Closing because no crashes reported for 12 weeks.

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → WORKSFORME
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Pushed by dmalyshau@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/994b5eb696b2
Fix accessing implicit WebGPU layouts r=jimb
Status: REOPENED → RESOLVED
Closed: 3 years ago3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: