Bug 1681765 - Fix accessing implicit WebGPU layouts r=jimb

Differential Revision: https://phabricator.services.mozilla.com/D116033