dom/webgpu/ComputePipeline.cpp
@@ -41,8 +41,10 @@ void ComputePipeline::Cleanup() {
 
 already_AddRefed<BindGroupLayout> ComputePipeline::GetBindGroupLayout(
     uint32_t index) const {
-  RefPtr<BindGroupLayout> object =
-      new BindGroupLayout(mParent, mImplicitBindGroupLayoutIds[index], false);
+  const RawId id = index < mImplicitBindGroupLayoutIds.Length()
+                       ? mImplicitBindGroupLayoutIds[index]
+                       : 0;
+  RefPtr<BindGroupLayout> object = new BindGroupLayout(mParent, id, false);
   return object.forget();
 }
 
